otus/lab_K_1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: lab1-deployment-pd
spec:
    replicas: 4
    selector:
       matchLabels:
          app: lab1-app-pd
    template:
       metadata:
          labels:
             app: lab1-app-pd
       spec:
          containers:
          - name: lab1-app-pd
            image: podzyubandocker/repository:otus.lesson1.v1
            ports:
              - name: web
                containerPort: 8000
            livenessProbe:
              httpGet:
                port: 8000
                path: /health
              initialDelaySeconds: 10
              periodSeconds: 5
              timeoutSeconds: 2
            readinessProbe:
              httpGet:
                port: 8000
                path: /health
              initialDelaySeconds: 10
              periodSeconds: 5
