otus/lab_K_1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab1-service-pd
spec:
  selector:
    app: lab1-app-pd
  ports:
    - protocol: TCP
      port: 9000
      targetPort: web
  type: NodePort
